samples/_failures_safe/1761247118_5780f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c976548.c: In function ‘determinant_2x2’:
./samples/SAFE/__tmp_1c976548.c:143:12: error: expected ‘)’ at end of input
  143 |     if (mat
      |        ~   ^
      |            )
./samples/SAFE/__tmp_1c976548.c:143:5: error: expected declaration or statement at end of input
  143 |     if (mat
      |     ^~
